[package]
name = "sqlighters"
description = "Easy creation of SQLite binary format for use in serverside applications, where typically the client runs SQLite in WASM"
version = "0.1.0"
edition = "2021"
homepage = "https://gitlab.com/sander-hautvast/sqlighte.rs"
repository = "https://gitlab.com/sander-hautvast/sqlighte.rs.git"
license-file = "LICENSE"
readme = "README.md"
keywords = ["sqlite"]
categories = ["database", "WASM"]

[dependencies]
byteorder = "1.4.3"

[lib]
name = "sqlighters"
crate-type = ["lib"]